The revision history for Net-Pcap

2009.03.xx - 0.17 - Sebastien Aperghis-Tramoni (SAPER)
  - [BUGFIX] Fix allocated size in pcap_open(), pcap_createsrcstr()
    and pcap_parsesrcstr(). 
  - [API] Now make the C-like API available by default. Added the
    pcap_perl_settings() function and UNSAFE_SIGNALS pseudo-bloc.
  - [CODE] Replaced all occurrences of safemalloc() with Newx().
  - [CODE] Silenced some warnings.
  - [DOC] Added a long note about Net::Pcap and signals delivery.
  - [DOC] Improved README.
  - [DOC] Mention Net::Pcap::Easy.
  - [TESTS] Fixed t/17-lib_version.t to handle two digits versions.
  - [TESTS] CPAN-RT#44448: Fixed t/17-lib_version.t to handle
    versions from the CVS, thanks to Craig Davison.
  - [TESTS] Refactored t/01-api.t and added checks for the new API.

2008.01.01 - 0.16 - Sebastien Aperghis-Tramoni (SAPER)
  - [BUGFIX] A typo prevented the new function names from working.
  - [TESTS] Added new tests: 21-next_ex.t, 22-open.t, 23-srcstr.t, 
    50-poe-component-pcap.t
  - [TESTS] Added support for user prefered device. See README.
  - [TESTS] Improved small bits of the tests here and there.

2007.12.02 - 0.15 - Sebastien Aperghis-Tramoni (SAPER)
  - [BUGFIX] CPAN-RT#30745: Fix WinPcap support.
  - [BUGFIX] CPAN-RT#25076: Fix next_ex().
  - [API] Now providing "pcap_"-prefixed aliases for all functions.
    Documentation was changed to use these names instead of the old ones.
  - [CMD] pcapinfo(1) no longer need IO::Interface.
  - [TESTS] CPAN-RT#30903: Fix t/03-openlive.t failure on Linux.
  - [DOC] CPAN-RT#27369: Several documentation fixes.
  - [DOC] CPAN-RT#31111: Document that pcap_stats() does not work 
    on savefiles.

2006.09.11 - 0.15_01 - Sebastien Aperghis-Tramoni (SAPER)
  - [DIST] Rewrote the functions detection code using DynaLoader.
  - [TESTS] Fixed small typo in warning message from t/podcover.t. Thanks
    to "Ani" on FreeNode.
  - [DOC] Improved documentation.
  - [EG] Added example script eg/pktdump.pl
